Finish kokoa clone!

--- a/chats.html
+++ b/chats.html
@@ -50,81 +50,88 @@
             <img src="img/nomad.png" class="ad__img">
         </div>
 
-        <div class="profile chats__margin-bottom">
-            <div class="profile__content">
-                <div class="profile__img__regular">
-                    <i class="fas fa-user"></i>
-                    <!-- <img src="" alt="" srcset=""> -->
-                </div>
-                <div class="profile__text">
-                    <span class="profile__name">박찬희</span>
-                    <span class="profile__message">이곳은 상태메세지입니다.</span>
-                </div>
-            </div>
-            <div class="profile__side">
-                <h3>1월 13일</h3>
-                <!-- <span>3</span>
-            <i class="fas fa-chevron-right"></i> -->
-            </div>
-        </div>
+        <a href="chat.html">
+            <div class="profile chats__margin-bottom">
 
-        <div class="profile chats__margin-bottom">
-            <div class="profile__content">
-                <div class="profile__img__regular">
-                    <i class="fas fa-user"></i>
-                    <!-- <img src="" alt="" srcset=""> -->
+                <div class="profile__content">
+                    <div class="profile__img__regular">
+                        <i class="fas fa-user"></i>
+                        <!-- <img src="" alt="" srcset=""> -->
+                    </div>
+                    <div class="profile__text">
+                        <span class="profile__name">박찬희</span>
+                        <span class="profile__message">이곳은 상태메세지입니다.</span>
+                    </div>
                 </div>
-                <div class="profile__text">
-                    <span class="profile__name">박찬희</span>
-                    <span class="profile__message">이곳은 상태메세지입니다.</span>
-                </div>
-            </div>
-            <div class="profile__side">
-                <div class="profile__side__chat">
+                <div class="profile__side">
                     <h3>1월 13일</h3>
-                    <h4 class="notification notification__profile">3</h4>
-                </div>
-
-                <!-- <span>3</span>
+                    <!-- <span>3</span>
             <i class="fas fa-chevron-right"></i> -->
-            </div>
-        </div>
-        <div class="profile chats__margin-bottom">
-            <div class="profile__content">
-                <div class="profile__img__regular">
-                    <i class="fas fa-user"></i>
-                    <!-- <img src="" alt="" srcset=""> -->
-                </div>
-                <div class="profile__text">
-                    <span class="profile__name">박찬희</span>
-                    <span class="profile__message">이곳은 상태메세지입니다.</span>
                 </div>
             </div>
-            <div class="profile__side">
-                <h3>1월 13일</h3>
-                <!-- <span>3</span>
-            <i class="fas fa-chevron-right"></i> -->
-            </div>
-        </div>
-        <div class="profile chats__margin-bottom">
-            <div class="profile__content">
-                <div class="profile__img__regular">
-                    <i class="fas fa-user"></i>
-                    <!-- <img src="" alt="" srcset=""> -->
-                </div>
-                <div class="profile__text">
-                    <span class="profile__name">박찬희</span>
-                    <span class="profile__message">이곳은 상태메세지입니다.</span>
-                </div>
-            </div>
-            <div class="profile__side">
-                <h3>1월 13일</h3>
-                <!-- <span>3</span>
-            <i class="fas fa-chevron-right"></i> -->
-            </div>
-        </div>
+        </a>
 
+        <a href="chat.html">
+            <div class="profile chats__margin-bottom">
+                <div class="profile__content">
+                    <div class="profile__img__regular">
+                        <i class="fas fa-user"></i>
+                        <!-- <img src="" alt="" srcset=""> -->
+                    </div>
+                    <div class="profile__text">
+                        <span class="profile__name">박찬희</span>
+                        <span class="profile__message">이곳은 상태메세지입니다.</span>
+                    </div>
+                </div>
+                <div class="profile__side">
+                    <div class="profile__side__chat">
+                        <h3>1월 13일</h3>
+                        <h4 class="notification notification__profile">3</h4>
+                    </div>
 
+                    <!-- <span>3</span>
+            <i class="fas fa-chevron-right"></i> -->
+                </div>
+            </div>
+        </a>
+        <a href="chat.html">
+            <div class="profile chats__margin-bottom">
+                <div class="profile__content">
+                    <div class="profile__img__regular">
+                        <i class="fas fa-user"></i>
+                        <!-- <img src="" alt="" srcset=""> -->
+                    </div>
+                    <div class="profile__text">
+                        <span class="profile__name">박찬희</span>
+                        <span class="profile__message">이곳은 상태메세지입니다.</span>
+                    </div>
+                </div>
+                <div class="profile__side">
+                    <h3>1월 13일</h3>
+                    <!-- <span>3</span>
+            <i class="fas fa-chevron-right"></i> -->
+                </div>
+            </div>
+        </a>
+        <a href="chat.html">
+            <div class="profile chats__margin-bottom">
+                <div class="profile__content">
+                    <div class="profile__img__regular">
+                        <i class="fas fa-user"></i>
+                        <!-- <img src="" alt="" srcset=""> -->
+                    </div>
+                    <div class="profile__text">
+                        <span class="profile__name">박찬희</span>
+                        <span class="profile__message">이곳은 상태메세지입니다.</span>
+                    </div>
+                </div>
+                <div class="profile__side">
+                    <h3>1월 13일</h3>
+                    <!-- <span>3</span>
+            <i class="fas fa-chevron-right"></i> -->
+                </div>
+            </div>
+        </a>
 
     </div>
 
@@ -141,7 +148,7 @@
             </a>
         </div>
         <div class="nav-btn">
-            <a href="#">
+            <a href="find.html">
                 <i class="fas fa-search"></i>
             </a>
         </div>
@@ -153,8 +160,11 @@
         </div>
     </div>
 
-    <script src="scroll.js"></script>
-    <script src="drop-list.js"></script>
+    <div id="no-mobile">
+        <span>Your screen is to bigㅠㅠ</span>
+    </div>
+
+
 </body>
 
 </html>
