--- a/friends.html
+++ b/friends.html
@@ -36,7 +36,7 @@
         </div>
     </div>
 
-    <div class="content">
+    <div class="content content__animation">
         <div class="profile">
             <div class="profile__content">
                 <div class="profile__img__big">
@@ -56,69 +56,27 @@
 
         <div class="divide-line"></div>
 
-        <div class="category__name">
-            <span>생일인 친구</span>
-            <i class="category__btn__birthday fas fa-chevron-up category__btn"></i>
-        </div>
-        <div class="profile__birthday profile__category">
-            <div class="profile">
-                <div class="profile__content">
-                    <div class="profile__img__small">
-                        <i class="fas fa-user"></i>
-                        <!-- <img src="" alt="" srcset=""> -->
-                    </div>
-                    <div class="profile__text">
-                        <span class="profile__name">친구의 생일을 확인해보세요!</span>
-                        <!-- <span class="profile__message">이곳은 상태메세지입니다.</span> -->
-                    </div>
-                </div>
-                <div class="profile__side">
-                    <span>3</span>
-                    <i class="fas fa-chevron-right"></i>
-                </div>
-            </div>
-        </div>
 
-        <div class="divide-line"></div>
-
-        <div class="category__name">
-            <span>즐겨찾기</span>
-            <i class="category__btn__recommend fas fa-chevron-up category__btn"></i>
-        </div>
-        <div class="profile__recommend profile__category">
-            <div class="profile">
-                <div class="profile__content">
-                    <div class="profile__img__small">
-                        <i class="fas fa-user"></i>
-                        <!-- <img src="" alt="" srcset=""> -->
-                    </div>
-                    <div class="profile__text">
-                        <span class="profile__name">김개똥</span>
-                        <span class="profile__message">이곳은 상태메세지입니다.</span>
-                    </div>
-                </div>
+        <div class="profile__category">
+            <div class="category__name">
+                <span>생일인 친구</span>
+                <i class="fas fa-chevron-up category__btn"></i>
             </div>
-            <div class="profile">
-                <div class="profile__content">
-                    <div class="profile__img__small">
-                        <i class="fas fa-user"></i>
-                        <!-- <img src="" alt="" srcset=""> -->
+            <div class="category__content">
+                <div class="profile">
+                    <div class="profile__content">
+                        <div class="profile__img__small">
+                            <i class="fas fa-user"></i>
+                            <!-- <img src="" alt="" srcset=""> -->
+                        </div>
+                        <div class="profile__text">
+                            <span class="profile__name">친구의 생일을 확인해보세요!</span>
+                            <!-- <span class="profile__message">이곳은 상태메세지입니다.</span> -->
+                        </div>
                     </div>
-                    <div class="profile__text">
-                        <span class="profile__name">홍길동</span>
-                        <!-- <span class="profile__message">이곳은 상태메세지입니다.</span> -->
-                    </div>
-                </div>
-            </div>
-            <div class="profile">
-                <div class="profile__content">
-                    <div class="profile__img__small">
-                        <i class="fas fa-user"></i>
-                        <!-- <img src="" alt="" srcset=""> -->
-                    </div>
-                    <div class="profile__text">
-                        <span class="profile__name">???</span>
-                        <span class="profile__message">ㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋ</span>
+                    <div class="profile__side">
+                        <span>3</span>
+                        <i class="fas fa-chevron-right"></i>
                     </div>
                 </div>
             </div>
@@ -126,28 +84,176 @@
 
         <div class="divide-line"></div>
 
-        <div class="category__name">
-            <span>추천친구</span>
-            <i class="category__btn__birthday fas fa-chevron-up category__btn"></i>
-        </div>
-        <div class="profile__birthday profile__category">
-            <div class="profile">
-                <div class="profile__content">
-                    <div class="profile__img__small">
-                        <i class="fas fa-user"></i>
-                        <!-- <img src="" alt="" srcset=""> -->
-                    </div>
-                    <div class="profile__text">
-                        <span class="profile__name">새로운 친구를 만나보세요!</span>
-                        <!-- <span class="profile__message">이곳은 상태메세지입니다.</span> -->
+        <div class="profile__category">
+            <div class="category__name">
+                <span>즐겨찾기</span>
+                <i class="fas fa-chevron-up category__btn"></i>
+            </div>
+            <div class="category__content">
+                <div class="profile">
+                    <div class="profile__content">
+                        <div class="profile__img__small">
+                            <i class="fas fa-user"></i>
+                            <!-- <img src="" alt="" srcset=""> -->
+                        </div>
+                        <div class="profile__text">
+                            <span class="profile__name">김개똥</span>
+                            <span class="profile__message">이곳은 상태메세지입니다.</span>
+                        </div>
                     </div>
                 </div>
-                <div class="profile__side">
-                    <span>9</span>
-                    <i class="fas fa-chevron-right"></i>
+                <div class="profile">
+                    <div class="profile__content">
+                        <div class="profile__img__small">
+                            <i class="fas fa-user"></i>
+                            <!-- <img src="" alt="" srcset=""> -->
+                        </div>
+                        <div class="profile__text">
+                            <span class="profile__name">홍길동</span>
+                            <!-- <span class="profile__message">이곳은 상태메세지입니다.</span> -->
+                        </div>
+                    </div>
+                </div>
+                <div class="profile">
+                    <div class="profile__content">
+                        <div class="profile__img__small">
+                            <i class="fas fa-user"></i>
+                            <!-- <img src="" alt="" srcset=""> -->
+                        </div>
+                        <div class="profile__text">
+                            <span class="profile__name">???</span>
+                            <span class="profile__message">ㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋ</span>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
+
+        <div class="divide-line"></div>
+
+        <div class="profile__category">
+            <div class="category__name">
+                <span>추천친구</span>
+                <i class="fas fa-chevron-up category__btn"></i>
+            </div>
+            <div class="category__content">
+                <div class="profile">
+                    <div class="profile__content">
+                        <div class="profile__img__small">
+                            <i class="fas fa-user"></i>
+                            <!-- <img src="" alt="" srcset=""> -->
+                        </div>
+                        <div class="profile__text">
+                            <span class="profile__name">새로운 친구를 만나보세요!</span>
+                            <!-- <span class="profile__message">이곳은 상태메세지입니다.</span> -->
+                        </div>
+                    </div>
+                    <div class="profile__side">
+                        <span>9</span>
+                        <i class="fas fa-chevron-right"></i>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="divide-line"></div>
+
+        <div class="profile__category">
+            <div class="category__name">
+                <span>친구 222</span>
+                <i class="fas fa-chevron-up category__btn"></i>
+            </div>
+            <div class="category__content">
+                <div class="profile">
+                    <div class="profile__content">
+                        <div class="profile__img__small">
+                            <i class="fas fa-user"></i>
+                            <!-- <img src="" alt="" srcset=""> -->
+                        </div>
+                        <div class="profile__text">
+                            <span class="profile__name">김개똥</span>
+                            <span class="profile__message">이곳은 상태메세지입니다.</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="profile">
+                    <div class="profile__content">
+                        <div class="profile__img__small">
+                            <i class="fas fa-user"></i>
+                            <!-- <img src="" alt="" srcset=""> -->
+                        </div>
+                        <div class="profile__text">
+                            <span class="profile__name">김개똥</span>
+                            <span class="profile__message">이곳은 상태메세지입니다.</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="profile">
+                    <div class="profile__content">
+                        <div class="profile__img__small">
+                            <i class="fas fa-user"></i>
+                            <!-- <img src="" alt="" srcset=""> -->
+                        </div>
+                        <div class="profile__text">
+                            <span class="profile__name">김개똥</span>
+                            <span class="profile__message">이곳은 상태메세지입니다.</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="profile">
+                    <div class="profile__content">
+                        <div class="profile__img__small">
+                            <i class="fas fa-user"></i>
+                            <!-- <img src="" alt="" srcset=""> -->
+                        </div>
+                        <div class="profile__text">
+                            <span class="profile__name">김개똥</span>
+                            <span class="profile__message">이곳은 상태메세지입니다.</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="profile">
+                    <div class="profile__content">
+                        <div class="profile__img__small">
+                            <i class="fas fa-user"></i>
+                            <!-- <img src="" alt="" srcset=""> -->
+                        </div>
+                        <div class="profile__text">
+                            <span class="profile__name">김개똥</span>
+                            <span class="profile__message">이곳은 상태메세지입니다.</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="profile">
+                    <div class="profile__content">
+                        <div class="profile__img__small">
+                            <i class="fas fa-user"></i>
+                            <!-- <img src="" alt="" srcset=""> -->
+                        </div>
+                        <div class="profile__text">
+                            <span class="profile__name">김개똥</span>
+                            <span class="profile__message">이곳은 상태메세지입니다.</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="profile">
+                    <div class="profile__content">
+                        <div class="profile__img__small">
+                            <i class="fas fa-user"></i>
+                            <!-- <img src="" alt="" srcset=""> -->
+                        </div>
+                        <div class="profile__text">
+                            <span class="profile__name">김개똥</span>
+                            <span class="profile__message">이곳은 상태메세지입니다.</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div id="splash-screen">
+        <i class="fas fa-comment"></i>
     </div>
 
     <div class="nav-bar">
@@ -163,7 +269,7 @@
             </a>
         </div>
         <div class="nav-btn">
-            <a href="#">
+            <a href="find.html">
                 <i class="fas fa-search"></i>
             </a>
         </div>
@@ -175,8 +281,11 @@
         </div>
     </div>
 
-    <script src="scroll.js"></script>
-    <script src="drop-list.js"></script>
+    <div id="no-mobile">
+        <span>Your screen is to bigㅠㅠ</span>
+    </div>
+
+    <script src="drop.js"></script>
 </body>
 
 </html>
