--- a/more.html
+++ b/more.html
@@ -198,7 +198,7 @@
             </a>
         </div>
         <div class="nav-btn">
-            <a href="#">
+            <a href="find.html">
                 <i class="fas fa-search"></i>
             </a>
         </div>
@@ -210,8 +210,10 @@
         </div>
     </div>
 
-    <script src="scroll.js"></script>
-    <script src="drop-list.js"></script>
+    <div id="no-mobile">
+        <span>Your screen is to bigㅠㅠ</span>
+    </div>
+
 </body>
 
 </html>
