--- a/setting.html
+++ b/setting.html
@@ -23,12 +23,16 @@
         </div>
     </div>
 
-    <div class="header">
-        <div class="header__title__setting">
-            <i class="fas fa-arrow-left"></i>
-            <span>설정</span>
+    <div class="alt-header">
+        <div class="alt-header__column">
+            <a href="javascript:history.back();">
+                <i class="fas fa-angle-left"></i>
+            </a>
         </div>
-        <div class="header__icons">
+        <div class="alt-header__column">
+            <span class="alt-header__title">설정</span>
+        </div>
+        <div class="alt-header__column">
             <i class="fas fa-search"></i>
         </div>
     </div>
@@ -156,8 +160,10 @@
         </div>
     </div>
 
-    <script src="scroll.js"></script>
-    <script src="drop-list.js"></script>
+    <div id="no-mobile">
+        <span>Your screen is to bigㅠㅠ</span>
+    </div>
+
 </body>
 
 </html>
