--- a/friends.html
+++ b/friends.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kokoa - friends</title>
+    <title>Kokoa - Friends</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/FortAwesome/Font-Awesome@5.14.0/css/all.min.css">
     <link rel="stylesheet" href="css/style.css">
@@ -285,7 +285,7 @@
         <span>Your screen is to bigㅠㅠ</span>
     </div>
 
-    <script src="drop.js"></script>
+    <script src="javascript/drop.js"></script>
 </body>
 
 </html>
