Finish Kokoa Cloneㅠㅠ

--- a/chat.html
+++ b/chat.html
@@ -46,7 +46,7 @@
         </div>
 
         <div class="message-row massage-animation">
-            <img src="img/img.png" class="message__img">
+            <img src="img/img.PNG" class="message__img">
             <div class="message">
                 <span class="message__author">홍길동</span>
                 <div class="message__info">
